UserList finished. Movie & TVSeries check added. Endpoint plans added. Swagger updated.
